# live-tee-and-capture

./: README.md  live_tee_and_capture.py  pyproject.toml  requirements.txt
