[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "live-tee-and-capture"
version = "0.1.0a0"
description = "Run a command and tee its stdout/stderr in real time to your terminal while also capturing them."
readme = "README.md"
requires-python = ">=2"
license = "MIT"
authors = [
  { name="Jifeng Wu", email="jifengwu2k@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "ctypes-unicode-proclaunch",
    "threading-value-event",
    "typing; python_version < '3.5'",
]

[project.urls]
"Homepage" = "https://github.com/jifengwu2k/live-tee-and-capture"
"Bug Tracker" = "https://github.com/jifengwu2k/live-tee-and-capture/issues"
